--- a/webpagedesign/src/components/Toolbar/Toolbarbot/Toolbarbot.css
+++ b/webpagedesign/src/components/Toolbar/Toolbarbot/Toolbarbot.css
@@ -2,8 +2,8 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  margin-top: 25px;
-  height: 50px;
+  height: 53px;
+  position: sticky;
 }
 .Toolbarbot__nav {
   background-color: rgb(51, 123, 238);
@@ -17,4 +17,10 @@
 }
 .Toolbarbot__tc {
   display: flex;
+  padding-right: 10px;
+}
+.Toolbarbot__tc a {
+  text-decoration: none;
+  color: white;
+  font-size: 0.8rem;
 }
